tests/lang/compile_fail/block_return_type_mismatch.koja
fn bad_match(x: Int) -> String
  match x
    1 -> 100
    _ -> 200
  end
end

fn main
  bad_match(1)
end
